refactor: 変数を外だし化と、テスト用のスクリプトを実装。

--- a/scripts/for_macine_parsonal/minoru/resources/etc/nginx/sites-available/wiki.conf
+++ b/scripts/for_macine_parsonal/minoru/resources/etc/nginx/sites-available/wiki.conf
@@ -1,6 +1,6 @@
 server {
     listen 443 ssl;
-    server_name miura-wiki.f5.si;
+    server_name {{ wiki_server_domain_name }};
 
     location / {
         proxy_pass http://hachiro.local.miu2.f5.si:3000/;
