refactor: ローカルのURLも設定ファイルか。

--- a/scripts/for_macine_parsonal/minoru/resources/etc/nginx/sites-available/wiki.conf
+++ b/scripts/for_macine_parsonal/minoru/resources/etc/nginx/sites-available/wiki.conf
@@ -3,6 +3,6 @@ server {
     server_name {{ wiki_server_domain_name }};
 
     location / {
-        proxy_pass http://hachiro.local.miu2.f5.si:3000/;
+        proxy_pass {{ wiki_server_local_url }};
     }
 }
