implemnt: SSL証明書のコマンドラインからの取得を実装。
また、すでに設定されている場合はスキップするようにも実装。

--- a/scripts/for_macine_parsonal/minoru/tasks/enable_reverse_proxy_and_ssl.yml
+++ b/scripts/for_macine_parsonal/minoru/tasks/enable_reverse_proxy_and_ssl.yml
@@ -25,6 +25,15 @@
     dest: /etc/nginx/sites-enabled/wiki.conf
     state: link
 
+- name: 証明書の取得が必要かどうかをディレクトリの存在有無で確かめる。
+  stat:
+    path: "/etc/letsencrypt/archive/{{ wiki_server_domain_name }}"
+  register: cert_dir
+
+- name: SertBotを使いLetsEncriptから証明書を取得しnginxの設定も書き換える。
+  shell: certbot --nginx --agree-tos --non-interactive -d {{ wiki_server_domain_name }} -m {{ wiki_server_domain_email }}
+  when: not cert_dir.stat.exists
+
 - name: デバッグ「ファイルが在ったか判定」の判定時期を確認。
   debug:
     msg: "wiki_server_domain_name:{{ wiki_server_domain_name }}"
