fix: リスク在る個別の情報を無くす。

--- a/scripts/for_macine_parsonal/minoru/settings.yml
+++ b/scripts/for_macine_parsonal/minoru/settings.yml
@@ -1,4 +1,4 @@
 host_name: minoru
-wiki_server_domain_name: miura-wiki.f5.si
+wiki_server_domain_name: wiki.example.com
+wiki_server_domain_email: mail@example.com
 wiki_server_local_url: http://hachiro.local.miu2.f5.si:3000/
-wiki_server_domain_email: kazuhito.sumpic@gmail.com
