bugfix: Bashの開業時の接続文字列を修正。

--- a/scripts/for_macine_parsonal/kei/tasks/install_growi_on_docker.yml
+++ b/scripts/for_macine_parsonal/kei/tasks/install_growi_on_docker.yml
@@ -42,7 +42,7 @@
 
 - name: GROWIのelasticsearch.ymlを今回の設定(このマシンに合わせた設定)に変更。
   shell: |
-    grep 'x-pack-ml.enabled' ./elasticsearch.yml
+    grep 'x-pack-ml.enabled' ./elasticsearch.yml \
     || echo 'x-pack-ml.enabled: false' >> ./elasticsearch.yml
   args:
     chdir: /var/lib/growi/docker_compose/elasticsearch/config
