bugfix: 設定の値が間違ってた。修正。

--- a/scripts/for_macine_parsonal/kei/tasks/install_growi_on_docker.yml
+++ b/scripts/for_macine_parsonal/kei/tasks/install_growi_on_docker.yml
@@ -42,8 +42,8 @@
 
 - name: GROWIのelasticsearch.ymlを今回の設定(このマシンに合わせた設定)に変更。
   shell: |
-    grep 'x-pack-ml.enabled' ./elasticsearch.yml \
-    || echo "\nx-pack-ml.enabled: false" >> ./elasticsearch.yml
+    grep 'xpack.ml.enabled' ./elasticsearch.yml \
+    || echo "\nxpack.ml.enabled: false" >> ./elasticsearch.yml
   args:
     chdir: /var/lib/growi/docker_compose/elasticsearch/config
 
