implement: Ansibleのプレイブックが一旦感性。

--- a/home-servers/jitaku/kei/part_test.yml
+++ b/home-servers/jitaku/kei/part_test.yml
@@ -10,4 +10,4 @@
   - block:
 
     - name: テスト用のタスクを実行する。
-      include_tasks: tasks/install_delge.yml
+      include_tasks: tasks/install_deluge.yml
