implement: keiサーバから、NFSを出すように。

--- a/home-servers/jitaku/kei/tasks/install_deluge.yml
+++ b/home-servers/jitaku/kei/tasks/install_deluge.yml
@@ -39,9 +39,22 @@
     dest: /additionalssd/deluge
     mode: 0644
 
-- name: delugeのdocker-composeを実行。
-  shell: |
-    docker compose ps | grep "deluge" \
-    || docker compose up -d
-  args:
-    chdir: /additionalssd/deluge
+# - name: delugeのdocker-composeを実行。
+#   shell: |
+#     docker compose ps | grep "deluge" \
+#     || docker compose up -d
+#   args:
+#     chdir: /additionalssd/deluge
+
+- name: NFS設定ファイルを配置
+  copy: 
+    src: resources/etc/exports
+    dest: /etc/exports
+    backup: yes
+
+- name: NFSサービス再起動。
+  systemd:
+    name: nfs-server.service
+    state: restarted
+    daemon_reload: yes
+    enabled: yes
