bugfix: 正規表現の書き方が間違ってたので、修正。

--- a/home-servers/jitaku/kei/main.yml
+++ b/home-servers/jitaku/kei/main.yml
@@ -80,8 +80,8 @@
       lineinfile:
         path: "/etc/rsyslog.conf"
         state: "present"
-        regexp: "^#cron"
-        line: "cron"    
+        regexp: "^#(cron.*)$"
+        line: "\1"    
 
     - name: バックアップスクリプトを毎日実行cronに登録。
       copy:
