implement: フォルダ作成を追加。

--- a/home-servers/jitaku/minoru/main.yml
+++ b/home-servers/jitaku/minoru/main.yml
@@ -85,3 +85,11 @@
         state: present
         key: "{{ lookup('file', './resources/user/upload_key.pub') }}"
       become: yes
+
+    - name: アップロード用の共有フォルダを作成。
+      file:
+        path: "/var/uploaded"
+        state: directory
+        owner: "root"
+        group: "root"
+        mode: "777"
